--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "pinia": "^2.3.1",
     "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.5.13",
