--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-tree": "^0.11.5",
     "vuetify": "^3.7.12"
   },
