--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-cookies": "^1.8.6",
     "vue-router": "^4.5.0",
     "vue-toastification": "^2.0.0-rc.5",
+    "vue3-cookies": "^1.0.6",
     "vue3-tree": "^0.11.5",
     "vuetify": "^3.7.12"
   },
